--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -437,12 +437,21 @@ img[class="gu-image"]{
     font-style: normal;
 }
 
-/*.fade-enter {*/
-/*    opacity: 0;*/
-/*    z-index: 1;*/
-/*}*/
+.fade-enter {
+    opacity: 0;
+    z-index: 1;
+}
 
-/*.fade-enter.fade-enter-active {*/
-/*    opacity: 1;*/
-/*    transition: opacity 1500ms ease-in;*/
-/*}*/
+.fade-enter-active {
+    opacity: 1;
+    transition: opacity 250ms ease-in;
+}
+.fade-exit{
+    opacity: 1;
+    z-index: 1
+}
+
+.fade-exit-active {
+    opacity: 0;
+    transition: opacity 250ms ease-in;
+}
